syntax = "proto3";

package user;

option go_package = "rpc/user";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp);
    rpc Login(LoginReq) returns (LoginResp);
    rpc GetUser(GetUserReq) returns (GetUserResp);
}

message RegisterReq {
    string email = 1;
    string password = 2;
    string password_confirm = 3;
}

message RegisterResp {
    uint32 user_id = 1;
}

message LoginReq {
    string email = 1;
    string password = 2;
}

message LoginResp {
    uint32 user_id = 1;
}

message GetUserReq {
    uint32 id = 1;
}

message GetUserResp {
    string email = 1;
}